--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-My Page
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; URL='https://www.linkedin.com/in/kenny-w-8157341a'" />
+  </head>
+</html>
